# doutorado-bib-canon

./: .gitignore  CLAUDE.md  INDEX.json  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-bootstrap/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-parser-markdown/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-dataclasses-core/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-contratos-abc/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
01_templates/artigo_cientifico/app/: README.md
02_escrita/: MANUAL_DE_ESCRITA.md  escrita_canonica.json  ontologia.json  voz_autoral.json
02_escrita/conjuncoes/: INDEX.json  conectores_anaforicos.json  conectores_elegantes.json  conectores_metaforicos.json  guia.md  posicoes.json
02_escrita/escrita_proibida/: 01_termos_lexicais_proibidos.json  02_expressoes_conectivas_proibidas.json  03_colocacoes_semanticas_proibidas.json  04_construcoes_sintaticas_proibidas.json  05_sinais_graficos_proibidos.json  06_regras_coocorrencia.json  07_sintagma_nominal_nu.json  08_estrangeirismos_sem_italico.json
02_escrita/termos_proibidos/: 01_termos_lexicais_proibidos.json  04_construcoes_sintaticas_proibidas.json
03_fontes/: README.md
04_normas/: INDEX.json  guia_ppgd_unifor.json  nbr_10520_2023.json  nbr_14724_2024.json  nbr_6023_2018.json  nbr_6024_2012.json  nbr_6027_2012.json  nbr_6028_2021.json
src/biblio_validador/: __init__.py  cli.py
tests/: test_cli.py
tests/core/: test_contracts.py  test_dataclasses.py
tests/parser/: test_markdown.py
(+91 files in other folders)
