[project]
name = "biblio-validador"
version = "0.1.0"
description = "Validador & Fixer acadêmico PT-BR — biblioteca canônica PPGD/Unifor"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kalyl Lamarck" }
]
dependencies = []

[project.scripts]
validar = "biblio_validador.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["biblio_validador"]
branch = true
