[project]
name = "biblio-validador"
version = "0.1.0"
description = "Validador & Fixer acadêmico PT-BR — biblioteca canônica PPGD/Unifor"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kalyl Lamarck" }
]
dependencies = [
    "loguru>=0.7.3",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "pylatexenc>=2.10,<3.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
validar = "biblio_validador.cli:app"

[project.optional-dependencies]
llm = [
    "anthropic>=0.97.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80
target-version = "py313"
# Phase 1 escopo: validador novo em src/ + tests/. Legacy Python em
# 01_templates/ (gdocs render, abntex2 helpers) é fora do projeto e será
# normalizado em phase futura quando integrado ao orchestrator (M8).
extend-exclude = [
    "01_templates",
    "02_escrita",
    "03_fontes",
    "04_normas",
    "05_metadados",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["biblio_validador"]
branch = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
